--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "helmchen",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://helmchen.neupi.net",
+  "homepage": "https://helmchen.neubauer.dev",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
